<resources>
    <string name="app_name">Steps_Count</string>
    <string name="health">健康</string>
    <string name="resource">搜   索</string>
    <string name="consult">搜索资讯推荐、动态</string>
    <string name="login">点击登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="personal">个人信息</string>
    <string name="order">全部订单</string>
    <string name="update">待付款</string>
    <string name="collection">个人收藏</string>
    <string name="receive">待收货</string>
    <string name="username">用户名：</string>
    <string name="sex">性别：</string>
    <string name="weight">体重：</string>
    <string name="age">年龄：</string>
    <string name="height">身高：</string>
    <string name="address">地址：</string>
    <string name="updatemsg">修改个人信息</string>
    <string name="exit">取消</string>
    <string name="registe">注册</string>
    <string name="inp_password">请输入密码</string>
    <string name="password">密     码：</string>
    <string name="inp_user">请输入账号</string>
    <string name="sure">确定</string>
    <string name="qq">QQ登录</string>
    <string name="setting">设置</string>
    <string name="updatepwd">修改登录密码</string>
    <string name="theaddress">收货地址</string>
    <string name="about">关于</string>
    <string name="costpwd">设置支付密码</string>
    <string name="back">返回</string>
    <string name="title_activity_goods">GoodsActivity</string>
    <string name="insertaddress">新增收货地址</string>
    <string name="goodsper">收货人：</string>
    <string name="name">请输入收货人姓名</string>
    <string name="tel">联系电话：</string>
    <string name="telper">请输入联系电话</string>
    <string name="tract">所在地区：</string>
    <string name="save">保存</string>
    <string name="cost">支付密码：</string>

    <string name="inp_ensure">确认密码</string>
    <string name="oldpwd">旧密码：</string>
    <string name="newpwd">新密码：</string>
    <string name="inp_newpwd">请输入新密码</string>
    <string name="news1">"    "今日必读------>步行对机体健康有哪些好处？点击这里快来了解一下吧！</string>
    <string name="news2">"    "国家发改委宣布，医疗保险将降低十个保护点。老年人将何去何从？</string>
    <string name="news3">"    "减肥饮食核心：这三类食物必须吃！</string>
</resources>
