<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.steps_count.Activity.Updatepwd">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldpwd"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/costpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inp_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newpwd"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inp_newpwd"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认密码："
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/surepwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inp_ensure"/>
    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="确定"
        android:id="@+id/sure"/>



</LinearLayout>
