<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="syj.com.healwork.Activity.CostpwdActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/costpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inp_password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inp_ensure"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inp_ensure"/>
    </LinearLayout>
    <Button
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure"
        android:id="@+id/sure"/>
</LinearLayout>
