<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="syj.com.healwork.Activity.SettingActivity">
    <TextView
        android:id="@+id/pwdupdate"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updatepwd"
        android:textSize="20dp"
        android:background="@drawable/txt"/>
    <TextView
        android:id="@+id/updatecost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/costpwd"
        android:textSize="20dp"
        android:background="@drawable/txt"/>
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theaddress"
        android:textSize="20dp"
        android:background="@drawable/txt"/>
    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="20dp"
        android:background="@drawable/txt"/>
    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="退出当前账号"
        android:textSize="20dp"
        android:background="@drawable/txt"/>

</LinearLayout>
