<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="50dp"
        android:paddingLeft="30dp"
        android:background="#CEFFCE">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/imag1"
            android:id="@+id/head" />
        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:id="@+id/per_message"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/personal"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/collection"
            android:layout_gravity="center"
            android:paddingLeft="10dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"/>
        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:id="@+id/setting"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
